--- a/packages/stencil/src/components/datacom-datepicker/datacom-datepicker.css
+++ b/packages/stencil/src/components/datacom-datepicker/datacom-datepicker.css
@@ -81,7 +81,7 @@
   border-color: var(--dc-datepicker-primary-interactive-color);
   border-radius: 0 0 8px 8px;
   position: absolute;
-  top: 52px;
+  top: 54px;
   left: 0;
   z-index: 1000;
 }
